day13-networkpolicy/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: np-backend
  namespace: dev
spec:
  replicas: 2

  selector:
    matchLabels:
      app: np-backend

  template:
    metadata:
      labels:
        app: np-backend

    spec:
      containers:
        - name: backend
          image: nginx:1.27
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: np-backend-service
  namespace: dev
spec:
  selector:
    app: np-backend

  ports:
    - port: 80
      targetPort: 80
