day13-networkpolicy/allow-client-backend.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-to-backend
  namespace: dev

spec:
  podSelector:
    matchLabels:
      app: np-backend

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: np-client

      ports:
        - protocol: TCP
          port: 80
