day13-networkpolicy/default-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: dev

spec:
  podSelector: {}

  policyTypes:
    - Ingress
